<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.intel.mnemonic</groupId>
  <artifactId>mnemonic-parent</artifactId>
  <version>2.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Mnemonic Project Parent POM</name>
  <url>https://github.com/NonVolatileComputing/Mnemonic</url>

  <licenses>
    <license>
      <name>Apache 2.0 License</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <organization>
    <name>Non-Volatile Computing Technologies</name>
    <url>https://github.com/NonVolatileComputing</url>
  </organization>

  <developers>
    <developer>
      <id>Gary</id>
      <name>Gang Wang</name>
      <email>gang1.wang@intel.com</email>
      <url></url>
      <organization></organization>
      <organizationUrl></organizationUrl>
      <timezone>US/Pacific</timezone>
    </developer>
    <developer>
      <id>Yanping</id>
      <name>Yanping Wang</name>
      <email>yanping.wang@intel.com</email>
      <url></url>
      <organization></organization>
      <organizationUrl></organizationUrl>
      <timezone>US/Pacific</timezone>
    </developer>
  </developers>

  <contributors>
  </contributors>

  <distributionManagement>
    <site>
      <id>gh-pages</id>
      <name>${project.artifactId} Github Pages</name>
      <url>http://nonvolatilecomputing.github.io/Mnemonic/</url>
    </site>
  </distributionManagement>

  <scm>
    <connection>scm:git:https://bigdata-memory@github.com/NonVolatileComputing/Mnemonic.git</connection>
    <developerConnection>scm:git:https://bigdata-memory@github.com/NonVolatileComputing/Mnemonic.git</developerConnection>
    <url>https://github.com/NonVolatileComputing/Mnemonic</url>
  </scm>

  <modules>
    <module>core</module>
    <module>collections</module>
    <module>examples</module>
    <module>allocator-services</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <skipTests>true</skipTests>
    <allocator.service.dir>${basedir}/../allocator-services/service-dist</allocator.service.dir>
    <github.global.server>github</github.global.server>
  </properties>

  <repositories>
    <repository>
      <id>central</id>
      <!-- This should be at top, it makes maven try the central repo first and then others and hence faster dep resolution -->
      <name>Maven Repository</name>
      <url>https://repo1.maven.org/maven2</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>bintray</id>
      <name>bintray</name>
      <url>http://dl.bintray.com/flowcomputing/commons</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>central</id>
      <url>https://repo1.maven.org/maven2</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
	<groupId>org.testng</groupId>
	<artifactId>testng</artifactId>
	<version>6.8.17</version>
	<scope>test</scope>
      </dependency>
      <dependency>
	<groupId>org.flowcomputing.commons</groupId>
	<artifactId>commons-resgc</artifactId>
	<version>0.8.7</version>
      </dependency>
      <dependency>
	<groupId>org.flowcomputing.commons</groupId>
	<artifactId>commons-primitives</artifactId>
	<version>0.6.0</version>
      </dependency>
      <dependency>
	<groupId>com.squareup</groupId>
	<artifactId>javapoet</artifactId>
	<version>1.3.1-SNAPSHOT</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-clean-plugin</artifactId>
	<executions>
	  <execution>
	    <id>auto-clean</id>
	    <phase>initialize</phase>
	    <goals>
	      <goal>clean</goal>
	    </goals>
	  </execution>
	</executions>
	<configuration>
	  <filesets>
	    <fileset>
	      <directory>.</directory>
	      <includes>
		<include>*.dat</include>
	      </includes>
	    </fileset>
	  </filesets>
	</configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.4</version>
        <dependencies>
	  <dependency>
	    <!--
		| allows markdown syntax for site generation. To use it place files below
		| src/site/markdown/[filename].md
	    -->
	    <groupId>org.apache.maven.doxia</groupId>
	    <artifactId>doxia-module-markdown</artifactId>
	    <version>1.7</version>
	  </dependency>
	</dependencies>
        <configuration>
	  <skipDeploy>true</skipDeploy>
	</configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-scm-publish-plugin</artifactId>
        <configuration>
	  <checkoutDirectory>${project.build.directory}/scmpublish</checkoutDirectory>
	  <checkinComment>Publishing site for ${project.artifactId}:${project.version}</checkinComment>
	  <content>${project.reporting.outputDirectory}/../staging</content>
	  <skipDeletedFiles>true</skipDeletedFiles>
	  <pubScmUrl>scm:git:https://github.com/NonVolatileComputing/Mnemonic.git</pubScmUrl>
	  <scmBranch>gh-pages</scmBranch> <!-- branch with static site -->
	</configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
	<plugin>
	  <groupId>org.apache.maven.plugins</groupId>
	  <artifactId>maven-clean-plugin</artifactId>
	  <version>3.0.0</version>
	</plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.3</version>
          <configuration>
            <compilerArgs>
              <arg>-XDignore.symbol.file</arg>
              <arg>-XDenableSunApiLintControl</arg>
            </compilerArgs>
            <source>1.7</source>
            <target>1.7</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.bsc.maven</groupId>
          <artifactId>maven-processor-plugin</artifactId>
          <version>2.2.4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.8</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.19.1</version>
          <configuration>
            <skipTests>${skipTests}</skipTests>
	    <enableAssertions>true</enableAssertions>
	    <argLine>-Djava.ext.dirs=${allocator.service.dir}</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.10.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-scm-publish-plugin</artifactId>
          <version>1.1</version>
        </plugin>
        <plugin>
          <groupId>com.github.wvengen</groupId>
          <artifactId>proguard-maven-plugin</artifactId>
          <version>2.0.11</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>2.4.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.6</version>
          <configuration>
            <forceCreation>true</forceCreation>
	    <archive>
	      <addMavenDescriptor>false</addMavenDescriptor>
	    </archive>
          </configuration>
        </plugin>
        <plugin>
	  <groupId>org.codehaus.mojo</groupId>
	  <artifactId>exec-maven-plugin</artifactId>
	  <version>1.4.0</version>
	</plugin>
      </plugins>
    </pluginManagement>
  </build>

  <reporting>
    <plugins>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-project-info-reports-plugin</artifactId>
	<version>2.6</version>
	<reportSets>
	  <reportSet>
	    <reports>
	      <report>index</report>
	    </reports>
	  </reportSet>
	</reportSets>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-javadoc-plugin</artifactId>
	<configuration>
	  <additionalparam>-Xdoclint:none</additionalparam>
	</configuration>
	<reportSets>
	  <reportSet>
	    <reports>
	      <report>javadoc</report>
	      <report>test-javadoc</report>
	    </reports>
	  </reportSet>
	  <reportSet>
	    <id>aggregate</id>
	    <inherited>false</inherited>
	    <reports>
	      <report>aggregate</report>
	    </reports>
	  </reportSet>
	</reportSets>
      </plugin>
    </plugins>
  </reporting>

</project>
